--- a/liff/answer.html
+++ b/liff/answer.html
@@ -152,7 +152,7 @@
           liff.login()
         }
       })
-      await liff.init({ liffId: "YOUR-LIFF-ID" })
+      await liff.init({ liffId: "1655636120-nZMLV7gd" })
     }
     main()
   </script>
