--- a/liff/index.html
+++ b/liff/index.html
@@ -42,7 +42,7 @@
     console.log("Hello World!")
   </script> -->
 
-  <script src="https://static.line-scdn.net/liff/edge/versions/2.7.1/sdk.js"></script>
+  <!-- <script src="https://static.line-scdn.net/liff/edge/versions/2.7.1/sdk.js"></script>
   <script>
     function createUniversalLink() {
     }
@@ -98,6 +98,6 @@
       // createUniversalLink()
     }
     main()
-  </script>
+  </script> -->
 </body>
 </html>
