--- a/liff/index.html
+++ b/liff/index.html
@@ -89,7 +89,7 @@
       async function getUserProfile() {
           const profile = await liff.getProfile()
           document.getElementById("pictureUrl").src = profile.pictureUrl
-          document.getElementById("userID").append(profile.userID)
+          document.getElementById("userId").append(profile.userId)
           document.getElementById("statusMessage").append(profile.statusMessage)
           document.getElementById("displayName").append(profile.displayName)
   
