--- a/liff/index.html
+++ b/liff/index.html
@@ -87,14 +87,14 @@
       }
   
       async function getUserProfile() {
-          const profile = await liff.getProfile()
-          document.getElementById("pictureUrl").src = profile.pictureUrl
-          document.getElementById("userId").append(profile.userId)
-          document.getElementById("statusMessage").append(profile.statusMessage)
-          document.getElementById("displayName").append(profile.displayName)
-  
-      }
-  
+      const profile = await liff.getProfile()
+      document.getElementById("pictureUrl").src = profile.pictureUrl
+      document.getElementById("userId").append(profile.userId)
+      document.getElementById("statusMessage").append(profile.statusMessage)
+      document.getElementById("displayName").append(profile.displayName)
+      document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
+    }
+    
       function getEnvironment() {
         document.getElementById("os").append(liff.getOS())
         document.getElementById("language").append(liff.getLanguage())
