--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
       }
   
       function getContext() {
+        document.getElementById("type").append(liff.getContext().type)
+        document.getElementById("viewType").append(liff.getContext().viewType)
+        document.getElementById("utouId").append(liff.getContext().utouId)
+        document.getElementById("roomId").append(liff.getContext().roomId)
+        document.getElementById("groupId").append(liff.getContext().groupId)
       }
   
       async function getUserProfile() {
@@ -116,7 +121,7 @@
         await liff.init({ liffId: "1655636120-nZMLV7gd" })
         getEnvironment()
         getUserProfile()
-        // getContext()
+        getContext()
         // getFriendship()
         // createUniversalLink()
       }
