--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
     <button onclick="openWindow()">Open Window</button>
     <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
-    <button id="btnLogOut" onclick="logOut()">Log Out</button>
+    <button id="btnLogOut" onclick="logOut()">Log Out, naja</button>
     <button id="btnClose" onclick="closed()">Close</button>
   
     <!-- <script src="js/vconsole.min.js"></script> -->
