--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <p id="universalLink2"><b>Universal Link with Query params:</b> </p>
     <p><a href="liff/path/?param=9">Link to Path</a></p>
   
-    <button id="btnMsg" onclick="sendMsg()">Send Message naja</button>
+    <button id="btnMsg" onclick="sendMsg()">Send Message ror alert</button>
     <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
     <button onclick="openWindow()">Open Window</button>
     <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
-    <button id="btnLogOut" onclick="logOut()">Log Out, naja</button>
+    <button id="btnLogOut" onclick="logOut()">Log Out, Pai young va</button>
     <button id="btnClose" onclick="closed()">Close</button>
   
     <!-- <script src="js/vconsole.min.js"></script> -->
