--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p id="universalLink2"><b>Universal Link with Query params:</b> </p>
     <p><a href="liff/path/?param=9">Link to Path</a></p>
   
-    <button id="btnMsg" onclick="sendMsg()">Send Message alert peaw</button>
+    <button id="btnMsg" onclick="sendMsg()">Send Message async await</button>
     <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
     <button onclick="openWindow()">Open Window</button>
     <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
@@ -80,7 +80,14 @@
 
     async function sendMsg() {
       if (liff.getContext().type !== "none") {
-        await alert("Message sent")
+        await liff.sendMessages([
+          {
+            "type": "sticker",
+            "stickerId": 1,
+            "packageId": 1
+          }
+        ])
+        alert("Message sent")
       }
     }
   
