--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <button onclick="openWindow()">Open Window</button>
     <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
     <button id="btnLogOut" onclick="logOut()">Log Out, Pai young va</button>
-    <button id="btnClose" onclick="closed()">Close</button>
+    <button id="btnClose" onclick="closed()">Close pid i sus</button>
   
     <!-- <script src="js/vconsole.min.js"></script> -->
     <!-- <script>
@@ -54,6 +54,7 @@
       }
   
       function closed() {
+        liff.closeWindows()
       }
   
       async function scanCode() {
