--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <button onclick="openWindow()">Open Window</button>
     <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
     <button id="btnLogOut" onclick="logOut()">Log Out, Pai young va</button>
-    <button id="btnClose" onclick="closed()">Close pid i sus</button>
+    <button id="btnClose" onclick="closed()">Close pid i sus version 2</button>
   
     <!-- <script src="js/vconsole.min.js"></script> -->
     <!-- <script>
@@ -54,7 +54,7 @@
       }
   
       function closed() {
-        liff.closeWindows()
+        liff.closeWindow()
       }
   
       async function scanCode() {
