--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
       }
   
       async function shareMsg() {
+        await liff.shareTargetPicker([
+          {
+            "type": "text",
+            "text" : "This is a meassage shared by function"
+          }
+        ])
       }
   
       function logOut() {
